examples/test/testpolicy18449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18449
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key3: value28
      key2: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value7
          key7: value36
      podSelector:
        matchLabels:
          key42: value3
